--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2581,107 +2581,107 @@ stories:
   domain: http://www.freemansd.com/
   link: https://www.freemansd.com/article/freeman-academy-ribs-fundraiser-returns-saturday
 images:
-- name: soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
-- name: ellis-island-ellisisland-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-constitution.jpg
-- name: white-house-lawn-white-house-lawn-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-matrix.jpg
-- name: mosaic-face-mosaic-face-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-rainbow-festival.jpg
-- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
-- name: old-granary-field-granaryfield-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colored-circuits.jpg
-- name: oldhouse-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-two.jpg
-- name: mistywoods-babyfoot-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-dali.jpg
-- name: oldhousecars-house-old-cars-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gred-mash.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
-- name: old-door-lock-old-door-lock-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-free-woman.jpg
-- name: yosemite-yosemite-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
-- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
-- name: oldhouse-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
-- name: adam-smith-adam-smith-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
-- name: mosaic-face-mosaic-face-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-aqua.jpg
-- name: san-francisco-street-view-san-francisco-street-view-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-satan-red.jpg
-- name: ellis-island-ellisisland-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alberto-giacometti.jpg
-- name: dragon-desert-desert-dragon-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-constitution.jpg
-- name: catacombs-catacombs-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-graham-sutherland.jpg
-- name: old-door-lock-old-door-lock-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
-- name: nyc-flag-nycflag-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-internet-numbers.jpg
-- name: abandonedbuildings_constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_constitution.jpg
-- name: rain-princess-DSC_0015.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
-- name: aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
-- name: fence-mexico-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-really-hot.jpg
-- name: bordercrossing-bordercrossing-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-atari-asteroids.jpg
-- name: mosaic-face-mosaic-face-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-light-dali.jpg
-- name: aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-- name: gypsy-wagon-gypsywagon-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-pond.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-bright-sand.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-bright-sand.png
-- name: art-museum-art-museum-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-horiz-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
-- name: gypsymosaic-gypsy-eyes-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-dream.jpg
-- name: powerlines-power-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-granite.jpg
-- name: curtain-curtain-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-dali.jpg
-- name: miamibeach-miamibeach-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-spagetti-accident.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: oldhotel-oldhotel-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dry-skin.jpg
-- name: christianity-christianity-under-construction-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
-- name: mosaic-face-mosaic-face-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-nazi-poster.jpg
-- name: mediterranean-mediterranean-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crabapple.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
-- name: old-barn-old-barn-1500-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-bright-sand.jpg
-- name: ellis-island-ellisisland-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-- name: curtain-curtain-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
+- name: hollywood-building-hollywood-building-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
+- name: downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+- name: gypsy-wagon-gypsywagon-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crunch-paper.jpg
+- name: eduardo-eduardo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purp-paper.jpg
+- name: mediterranean-mediterranean-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+- name: locked-up-steam-lock-up-steam-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colorful-dream.jpg
+- name: castle-wall-DSC-0067-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-atari-asteroids.JPG
+- name: yosemite-yosemite-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alberto-giacometti.jpg
+- name: old-cabin-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dali-two.jpg
+- name: sand-hand-sand-hand-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-neo-instinct.jpg
+- name: catacombs-catacombs-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-two.jpg
+- name: aws-s3-meadow-meadow-bright-sand-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-meadow-meadow-bright-sand-still-600.jpg
+- name: bordercrossing-bordercrossing-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crunch-paper.jpg
+- name: old-door-lock-old-door-lock-2-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-missle.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: legal-statue-legalstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
+- name: dragon-desert-desert-dragon-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
+- name: white-house-lawn-white-house-lawn-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-monet-one.jpg
+- name: locked-up-steam-lock-up-steam-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-hot-spicy.jpg
+- name: wind-mills-windmills-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-light-dali.jpg
+- name: adam-smith-adam-smith-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-dys-1.jpg
+- name: oldcabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: carry-load-carryload-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-missle.jpg
+- name: beach-rocks-beach-rocks-currents-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-monet-one.jpg
+- name: oldsmallboat-oldsmallboat-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-color.jpg
+- name: hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
+- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+- name: beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+- name: legal-statue-legalstatue-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-far-away.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
+- name: wind-mills-windmills-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-dali.jpg
+- name: border-fence-border-fence-on-hill-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
+- name: old-granary-field-granaryfield-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+- name: gears-4882162452-fa3126b38d-b-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-ww2-color.jpg
+- name: amusement-park-amusement-park-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-bright-sand.jpg
+- name: supreme-court-supremecourt-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
+- name: castle-wall-DSC-0067-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-clean-view.JPG
+- name: bordercrossing-bordercrossing-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-dream.jpg
+- name: old-barn-old-barn-1500-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+- name: oldsmallboat-oldsmallboat-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-smooth-ride.jpg
+- name: cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+- name: downtheline-downtheline-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
 ---
 Wilson Wins Half Marathon.&nbsp;Utah Poacher Claims Harsh Handcuffing By Game Wardens Tore Both Rotator Cuffs.&nbsp;Japan Cites Security Concerns In Curbing Exports To SKorea.&nbsp;Rotted Wooden Sculpture Of Native American To Be Replaced.&nbsp;Border Patrol Head Condemns Agents' Offensive Facebook Posts.&nbsp;The New Turf Is In At Todd Field As Renovations Continue.&nbsp;Take Cover Florida As July Is The Deadliest Month For Lightning.&nbsp;Hearings Start For Rezoning Application.&nbsp;
